--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cap:open": "npx cap open android"
   },
   "dependencies": {
+    "@capacitor-community/text-to-speech": "^6.0.0",
     "@capacitor/android": "^7.0.1",
     "@capacitor/app": "^7.0.0",
     "@capacitor/browser": "^7.0.2",
