--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "sitemap": "next-sitemap",
     "cap:dev": "next dev --turbopack --port 3000",
     "cap:run": "npx cap run android --live-reload --host 192.168.1.23 --port 3000",
-    "cap:build": "next build && npx cap sync",
+    "cap:build": "CAPACITOR_BUILD=true next build && npx cap sync",
     "cap:sync": "npx cap sync",
     "cap:open": "npx cap open android"
   },
